# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-May-2010 Jean-Marie Simonet
$ Added string
# [#20654] Sorting of Featured Articles in Administration don't work. Thanks Omar.
# [#20671] Error uninstalling template due to capital letters in template name. Thanks Nikolai.
# [#20660] mod_menu can't output invalid markup. Thanks Christophe.

28-May-2010 Andrew Eddie
 # Fixed issue [#20272] Can't provide multiple select list in modules.
 # Fixed issue [#20675] Performance Improvements for JAccess:getGroupsByUser() (OmarRamos).
 # Fixed issue [#20522] Redirect Manager - Date is wrong &  copy function (Peter Martin).

27-May-2010 Jean-Marie Simonet
$ [#20659] Converting strings to the new format in installation. Thanks Johnathan Lima.
# [#20658] Sample data install leads to bad error in cas of inactivity period. Thanks Christophe.
$ Consolidating some strings
$ Refactoring Installation keys/ini files (WIP)

27-May-2010 Sam Moffatt
 # Applied [#20263] E_WARNING Error in JInstallerTemplate::loadLanguage() and
 JInstaller::parseFiles(), thanks to Nikolai Plath

26-May-2010 Christophe Demko
 # Fixed [#20575] missing menu items (thanks Jean-Marie Simonet, bill richardson, Airton Torres)
 # Fixed [#20577] Boxes of meta description and meta-tags do not appear (thanks Dennis Hermacki, Elin Waring and Pierre Gazzola)

26-May-2010 Jean-Marie Simonet
# [#20630] Changing site language does not work if the same content one does not exist (Thanks Christophe)
# [#20644] [PATCH] Fix a small comment error. Thanks Rouven.
# [#20513] Can't override default_ftp in com_install (Thanks Christophe)
# [#20498] mod_menu default renderer adds "Menu Tag ID" to class name (Thanks Bill)
# [#20472] Error: Article Saved Successfully (Beez)
# [#20649] ID property is translated in "Templates Manager: Edit Style" page. Thanks Dennis
$ Consolidated some strings.
#+ [#20479] Install Sample Data button does not become 'un-clickable' after install. Thanks Nicholas.