@@ -20,8 +20,8 @@ COM_SEARCH_ORDERING="Ordering:"
 COM_SEARCH_SEARCH="Search"
 COM_SEARCH_SEARCH_AGAIN="Search Again"
 COM_SEARCH_SEARCH_KEYWORD="Search Keyword:"
-COM_SEARCH_SEARCH_KEYWORD_RESULT="Search Keyword: <strong>%1$s</strong>.&nbsp;Total: %2$s result found."
-COM_SEARCH_SEARCH_KEYWORD_N_RESULTS="Search Keyword: <strong>%1$s</strong>.&nbsp;Total: %2$s results found."
+COM_SEARCH_SEARCH_KEYWORD_N_RESULTS_1="<strong>Total: One result found.</strong>"
+COM_SEARCH_SEARCH_KEYWORD_N_RESULTS="<strong>Total: %s results found.</strong>"
 COM_SEARCH_SEARCH_ONLY="Search Only:"
 COM_SEARCH_SEARCH_RESULT="Search Result"
 COM_SEARCH_UNCATEGORISED_CONTENT="Uncategorised Content"
